--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI/CD to VPS with Docker Swarm
 on:
   push:
     branches:
-      - alexis
+      - main
 
 permissions:
   contents: read
@@ -12,6 +12,13 @@ permissions:
 jobs:
   build-test-publish-deploy:
     runs-on: ubuntu-latest
+
+    env:
+      GHCR_PAT: ${{ secrets.GHCR_PAT }}
+      VPS_HOST: ${{ secrets.VPS_HOST }}
+      VPS_USER: ${{ secrets.VPS_USER }}
+      VPS_PASSWORD: ${{ secrets.VPS_PASSWORD }}
+      VPS_SSH_PORT: ${{ secrets.VPS_SSH_PORT }}
 
     steps:
       # 1️⃣ Checkout del código
@@ -39,7 +46,7 @@ jobs:
 
       # 6️⃣ Login en GitHub Container Registry
       - name: Login to GHCR
-        run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u adqvelez-cloud --password-stdin
+        run: echo "${{ env.GHCR_PAT }}" | docker login ghcr.io -u adqvelez-cloud --password-stdin
 
       # 7️⃣ Construir imagen Docker
       - name: Docker Build
@@ -57,31 +64,47 @@ jobs:
           docker push $IMAGE:${{ github.sha }}
 
       # 9️⃣ Copiar stack.yml al VPS
-      - name: Upload stack.yml to VPS
+      - name: Copiar stack.yml al VPS (SCP)
         uses: appleboy/scp-action@v1
         with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          password: ${{ secrets.VPS_PASSWORD }}
-          port: ${{ secrets.VPS_SSH_PORT }}
+          host: ${{ env.VPS_HOST }}
+          username: ${{ env.VPS_USER }}
+          password: ${{ env.VPS_PASSWORD }}
+          port: ${{ env.VPS_SSH_PORT }}
           source: "stack.yml"
-          target: "/home/${{ secrets.VPS_USER }}/deploy"
+          target: "/home/${{ env.VPS_USER }}/deploy"
+
+      # 9.1️⃣ Verificar que stack.yml se copió correctamente
+      - name: Verificar copia de stack.yml en VPS
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ env.VPS_HOST }}
+          username: ${{ env.VPS_USER }}
+          password: ${{ env.VPS_PASSWORD }}
+          port: ${{ env.VPS_SSH_PORT }}
+          script: |
+            if [ -f ~/deploy/stack.yml ]; then
+              echo "✅ stack.yml copiado correctamente"
+            else
+              echo "❌ Error: stack.yml no encontrado en ~/deploy/"
+              exit 1
+            fi
 
       # 🔟 Deploy en el VPS via SSH
       - name: Deploy on VPS via SSH
         uses: appleboy/ssh-action@v1
         with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          password: ${{ secrets.VPS_PASSWORD }}
-          port: ${{ secrets.VPS_SSH_PORT }}
+          host: ${{ env.VPS_HOST }}
+          username: ${{ env.VPS_USER }}
+          password: ${{ env.VPS_PASSWORD }}
+          port: ${{ env.VPS_SSH_PORT }}
           script: |
             echo "🚀 Iniciando despliegue en VPS"
 
             cd ~/deploy
 
             # Login al GHCR desde el VPS
-            echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u adqvelez-cloud --password-stdin
+            echo "${{ env.GHCR_PAT }}" | docker login ghcr.io -u adqvelez-cloud --password-stdin
 
             # Descargar la última imagen
             docker pull ghcr.io/adqvelez-cloud/proyecto-alexis:latest
